--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -15,13 +15,13 @@
 <body>
   <header class="header">
     <a class="header__branding" href="/">
-      <img class="header__logo" src="/images/icons/cheese.svg" alt="cheese logo"> 
-      <h1 class="header__title">CheeseCity</h1>
+      <img class="header__logo" src="/images/icons/logo.svg" alt="fosters lab logo"> 
+      <h1 class="header__title">Foster's Lab</h1>
     </a>
     <div class="header__cart">
       <a href="#" class="snipcart-checkout" style="text-decoration: none;">
         <div class="snipcart-summary">
-          <img src="/images/icons/cart.svg" alt="">
+          <img src="/images/icons/cart.svg" alt="cart">
           <span class="snipcart-total-price"></span>
         </div>
       </a>
