--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -15,7 +15,7 @@
 <body>
   <header class="header">
     <a class="header__branding" href="/">
-      <img class="header__logo" src="/images/icons/logo.svg" alt="fosters lab logo"> 
+      <img class="header__logo" src="/images/icons/icon.svg" alt="fosters lab logo"> 
       <h1 class="header__title">Foster's Lab</h1>
     </a>
     <div class="header__cart">
