--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,17 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel='shortcut icon' type='image/x-icon' href='/images/icons/favicon.ico' />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-  <script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" data-api-key="MzMxN2Y0ODMtOWNhMy00YzUzLWFiNTYtZjMwZTRkZDcxYzM4" id="snipcart"></script>
+  <script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" data-api-key="Y2VkY2ZhOTktZDBlYi00N2RkLTkzZTMtZmQ3OTlhMzg4NGFkNjM3MTc2NTE0NjcyOTM0NzQ3" id="snipcart"></script>
   <link href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" rel="stylesheet" type="text/css" />
   {{ $style := resources.Get "scss/main.scss" | resources.ToCSS | resources.Minify | resources.Fingerprint }}
   <link rel="stylesheet" href="{{ $style.Permalink }}">
-  <title>CheeseCity</title>
+  <title>Foster's Lab</title>
 </head>
 <body>
   <header class="header">
     <a class="header__branding" href="/">
-      <img class="header__logo" src="/images/icons/icon.svg" alt="fosters lab logo"> 
-      <h1 class="header__title">Foster's Lab</h1>
+      <img class="header__logo" src="/images/icons/logo.svg" alt="fosters lab logo"> 
+      <h1 class="header__title"></h1>
     </a>
     <div class="header__cart">
       <a href="#" class="snipcart-checkout" style="text-decoration: none;">
